2000-11-20  Simeon H.K. Fitch  <simeon@fitch.net>

	* org/apache/tools/ant/gui/command/DisplayErrorCmd.java: Added
	code to allow display of stack backtrace if needed.

2000-11-18  Simeon H.K. Fitch  <simeon@fitch.net>

	* org/apache/tools/ant/gui/customizer/PropertiesPropertyEditor.java:
	Added proper editing capability. Rows are added and removed
	automatically. 
	
	* org/apache/tools/ant/gui/customizer/XXXPropertyEditor.java:
	Removed stray event firing upon setting value of property to edit.

2000-11-16  Simeon H.K. Fitch  <simeon@fitch.net>

	* org/apache/tools/ant/gui/customizer/StringPropertyEditor.java:
	Changed underlying widget type to JTextPane so that it would
	accomidate multi-line strings property.

	* org/apache/tools/ant/gui/acs/ACSTreeNodeElement.java: Fixed
	nasty java.lang.IllegalAccessException bug that I thought was
	related to Java 1.3 Blackdown RC1, but wasn't. It was related to
	using Jikes, which interprests method resolution differently than
	javac, resulting in a call trying to access a private method
	implementation of a public interface.

	* org/apache/tools/ant/gui/ResourceManager.java: Added convenience
	method for getting resource images for a given class.

	* org/apache/tools/ant/gui/AntAction.java: Added toggle property.

	* org/apache/tools/ant/gui/ActionManager.java: Added ability to
	handle toggle actions to menu bar (still need to add support to
	tool bar).

	* org/apache/tools/ant/gui/EventResponder.java: Added emacs
	notifier command.

	* org/apache/tools/ant/gui/ide/EmacsNotifier.java: Imported.

	* org/apache/tools/ant/gui/ProjectProxy.java: Added code to add
	listeners registered with the AppContext to the build.

	* org/apache/tools/ant/gui/AppContext.java: Now allows registering
	of build listeners to be added to project at build time.

	* org/apache/tools/ant/gui/Main.java: Added loading of build file
	provided on command line.

2000-11-14  Simeon H.K. Fitch  <simeon@fitch.net>
